<resources>
    <string name="app_name">Agro Recomendaciones</string>
    <string name="title_activity_login">INGRESAR</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_create_account">¿Necesita una cuenta?</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="welcome">"Bienvenidos !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">La constraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Hubo un error al iniciar sesión, intente nuevamente."</string>

    <!--Menu options-->
    <string name="optionMuro">"MURO"</string>
    <string name="optionChat">"CHAT"</string>
    <string name="optionHorarioClases">"HORARIO DE CLASES"</string>
    <string name="optionBoletas">"BOLETAS"</string>
    <string name="optionServiciosAtencion">"SERVICIOS DE ATENCIÓN"</string>
    <string name="optionSedes">"SEDES"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bienvenido</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wilber Choque</string>
    <string name="nav_header_subtitle">w.choque.itusaca@testing.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Mi Perfil</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Mis Productos</string>
    <string name="menu_gallery">Buscar otros productos</string>
    <string name="menu_search_all_products">Buscar productos</string>
    <string name="menu_favoriteProduct">Favoritos</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_manage_offer">Gestionar ofertas</string>
    <string name="menu_bank_account">Cuentas Bancarias</string>
    <string name="menu_update_request">Solicitudes de actualización</string>
    <string name="menu_order">Ordenes de compra</string>
    <string name="menu_order_history">Historial Ordenes de compra</string>

    <string-array name="Tags">
        <item>HTML</item>
        <item>CSS</item>
        <item>JavaScript</item>
        <item>Angular JS</item>
        <item>Python</item>
        <item>Ruby on Rails</item>
    </string-array>

    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Cerrar navigation drawer</string>
    <string name="headlines">Encabezados de</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main3">MainActivity3</string>
</resources>