<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
       <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_favoriteProduct"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_favoriteProduct" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon_2105"
            android:title="@string/menu_profile" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chat" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bank_account"
            android:icon="@drawable/ic_bank_account_foreground"
            android:title="@string/menu_bank_accounts" />
    </group>
</menu>