<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <!--Usuario comprador mayorista
        * Productos recomendados
    -->
    <!--<fragment
        android:id="@+id/nav_search_all_products"
        android:name="com.upc.appcentroidiomas.ProductsListActivity"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_list_products" />-->

    <!--Usuario Agricultor
        * Mis productos
    -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.upc.appcentroidiomas.ProductsListActivity"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_list_products" />


    <!--All users
    * Buscar productos
    * Favoritos
    * Mensajes
    -->
    <fragment
        android:id="@+id/nav_search_all_products"
        android:name="com.upc.appcentroidiomas.AllProductsListFragment"
        android:label="@string/menu_search_all_products"
        tools:layout="@layout/activity_list_all_products" />
    <fragment
        android:id="@+id/nav_favoriteProduct"
        android:name="com.upc.appcentroidiomas.ui.slideshow.FavoriteProductsFragment"
        android:label="@string/menu_favoriteProduct"
        tools:layout="@layout/fragment_favorite_products" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.upc.appcentroidiomas.ProfileFragmentNew"
        android:label="@string/menu_profile"
        tools:layout="@layout/activity_profile" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.upc.appcentroidiomas.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/activity_chat" />
    <fragment
        android:id="@+id/nav_bank_account"
        android:name="com.upc.appcentroidiomas.BankAccountFragment"
        android:label="@string/menu_bank_accounts"
        tools:layout="@layout/activity_chat" />

</navigation>